--- a/cv/cv-fr.tex
+++ b/cv/cv-fr.tex
@@ -1,144 +1,92 @@
 \name{Diego Barquero Morera}
-\address{Adresse : Île-de-France, Créteil, 5 Rue des Bordières}
-\address{Téléphone (Costa Rica) : (+506) 8714 4835, Téléphone (France) : (+33) 745 105 417}
-\address{Email : \href{mailto:diego.barqueromorera@studenti.unitn.it}{diego.barqueromorera@studenti.unitn.it} $\qquad$ \href{https://github.com/DiegoBarMor}{GitHub} $\qquad$ \href{https://www.linkedin.com/in/diego-barquero-morera-98863020b/}{LinkedIn}}
+\address{
+    Courriel: \href{mailto:diego.barquero-morera@phys.ens.fr}{diego.barquero-morera@phys.ens.fr}
+    $\qquad$ \href{https://diegobarmor.github.io/}{Site web}
+    $\qquad$ \href{https://github.com/DiegoBarMor}{GitHub}
+    $\qquad$ \href{https://www.linkedin.com/in/diego-barquero-morera-98863020b/}{LinkedIn}
+}
+\address{Portable: (+33) 745 105 417 $\qquad$ Adresse: Île-de-France, Créteil, 5 Rue des Bordières}
 \begin{document}
 
 
-%\scriptsize{\small}
 %--------------------------------------------------------------------
-%    SECTION ÉDUCATION
+%    EXPERIENCE SECTION
 %--------------------------------------------------------------------
-
-\begin{rSection}{Éducation}
-
+\begin{rSection}{Expérience}
     \vspace{\baselineskip}
 
-    {\bf \href{https://u-paris.fr/en/}{Université Paris Cité (UPC), Paris, France}} \hfill {01.03.2023–31.10.2023} \\
-    \textit{Stage}\\
-    Intitulé du stage : "Caractérisation physique des sites de liaison protéine/ligands pour la visualisation en réalité augmentée"\\
+    \begin{rSubsectionShort}{
+        \bf Tuteur en mathématiques @ \href{https://u-paris.fr/en/}{Université Paris Cité (UPC)}
+    }{07.2024-03.2027}{Cours pour les étudiants de Master et développement du \href{https://diegobarmor.github.io/maths-tutorship/}{site web complémentaire}.}{Paris, France}
+    \end{rSubsectionShort}
 
-    {\bf \href{https://www.unitn.it/}{Università degli Studi di Trento (Unitn), Trento, Italie}} \hfill {13.09.2021-14.12.2023} \\
-    \textit{Master en Sciences quantitatives et informatiques}\\
-    Intitulé de la thèse : "Caractérisation physique des sites de liaison des protéines et de l'ARN et leur représentation graphique dans le logiciel de visualisation moléculaire UnityMol"\\
+    \begin{rSubsectionShort}{
+        \bf Doctorant @ \href{https://www.lpens.ens.psl.eu/}{École Normale Supérieure (ENS)}
+    }{03.2024-03.2027}{Optimisation d'un champ de force coarse-grained pour l'ARN. Analyse de données, \\ machine learning avec Python, PyTorch, Bash. Programmation en Fortran, C++, C.}{Paris, France}
+    \end{rSubsectionShort}
 
-    {\bf \href{https://www.tum.de/en/}{Technical University of Munich (TUM), Munich, Allemagne}}\hfill {01.04.2019-30.09.2019}\\
-    \textit{Programme d'échange}\\
-    Cours suivis à la Faculté de Chimie (Biologie moléculaire et Chimie organique)\\
+    \begin{rSubsectionShort}{
+        \bf Stage de Master @ \href{https://u-paris.fr/en/}{Université Paris Cité (UPC)}
+    }{03.2023-02-2024}{Caractérisation des sites de liaison t leur visualisation avec Unity/C\#.}{Paris, France}
+    \end{rSubsectionShort}
 
-    {\bf \href{https://www.tec.ac.cr/}{Institut de technologie du Costa Rica (TEC), Cartago, Costa Rica}} \hfill {08.02.2016-02.09.2021} \\
-    \textit{B.Sc. en Génie biotechnologique}\\
-    Intitulé de la thèse : "Proposition de comparaison des flux métaboliques en adaptant des algorithmes aux voies métaboliques"\\
-    Note : 100/100 avec distinction
-
+    \begin{rSubsectionShort}{
+        \bf Tuteur en chimie organique @ \href{https://www.tec.ac.cr/}{Costa Rica Institute of Technology (ITCR)}
+    }{07.2017-11.2018}{Cours de chimie organique pour les étudiants de Licence.}{Cartago, Costa Rica}
+    \end{rSubsectionShort}
 
 \end{rSection}
-%--------------------------------------------------------------------
-%    SECTION COMPÉTENCES TECHNIQUES
-%--------------------------------------------------------------------
 
+
+%--------------------------------------------------------------------
+%    EDUCATION SECTION
+%--------------------------------------------------------------------
+\begin{rSection}{Formation}
+    \vspace{\baselineskip}
+
+    \begin{rSubsectionShort}{
+        \bf PhD en biophysique computationnelle @ \href{https://www.lpens.ens.psl.eu/}{École Normale Supérieure (ENS)}
+    }{03.2024-03.2027}{Optimisation d'un champ de force coarse-grained pour l'ARN.}{Paris, France}
+    \end{rSubsectionShort}
+
+    \begin{rSubsectionShort}{
+        \bf Master en biologie quantitative et computationnelle \\\@ \href{https://www.unitn.it/}{Università degli Studi di Trento (Unitn)}
+    }{09.2021-12.2023}{Caractérisation et visualisation des sites de liaison. \\30L/30 avec distinction.}{Trento, Italy}
+    \end{rSubsectionShort}
+
+    \begin{rSubsectionShort}{
+        \bf Programme d'échange @ \href{https://www.tum.de/en/}{Technical University of Munich (TUM)}
+    }{04.2019-09.2019}{Cours de chimie organique et de biologie moléculaire.}{Munich, Germany}
+    \end{rSubsectionShort}
+
+    \begin{rSubsectionShort}{
+        \bf Licence en génie biotechnologique \\\@ \href{https://www.tec.ac.cr/}{Costa Rica Institute of Technology (TEC)}
+    }{02.2016-09.2021}{Développement d'algorithmes pour la comparaison des flux métaboliques. \\100/100 avec distinction.}{Cartago, Costa Rica}
+    \end{rSubsectionShort}
+
+\end{rSection}
+
+
+%--------------------------------------------------------------------
+%    COMPETENCES SECTION
+%--------------------------------------------------------------------
 \begin{rSection}{Compétences}
     \vspace{\baselineskip}
-    \subsection*{}
+    \subsection*{Expérience avec les logiciels :}
+    \begin{itemize}
+        \item \textbf{Niveau élevé :} Python, Bash. Linux, VS Code, Git, MS Office.
+        \item \textbf{Niveau intermédiaire :} PyTorch, LaTeX, Markdown, HTML, Javascript, CSS, \\\ Fortran, C, C\#, C++, Java, Kotlin. Unity3D, Android Studio, Visual Studio.
+        \item \textbf{Notions :} Batch, R, MATLAB, Tcl, Rust, Lua, GLSL.
+    \end{itemize}
 
-    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    \begin{table}[h!]
-        \centering
-        \captionof*{table}{Langages informatiques}
-        \begin{tabular}{llll}
-            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {Python};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (2.7,.3); %90%
-            \end{tikzpicture} &
-
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {C\#};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (1.5,.3); %50%
-            \end{tikzpicture} &
-
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {C++};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (1.2,.3); %40%
-            \end{tikzpicture} &
-
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {JavaScript, Java};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (0.75,.3); %25%
-            \end{tikzpicture} \\
-
-            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {LaTeX};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (1.5,.3); %50%
-            \end{tikzpicture} &
-
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {HTML};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (.75,.3); %25%
-            \end{tikzpicture} &
-
-            \begin{tikzpicture}
-                \node [anchor=west] at (0,.6) {Batch, MATLAB};
-                \draw [fill=white] (0,0) rectangle (3,.3);
-                \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (.3,.3); %10%
-            \end{tikzpicture} &
-
-        \begin{tikzpicture}
-            \node [anchor=west] at (0,.6) {C, GLSL, Tcl};
-            \draw [fill=white] (0,0) rectangle (3,.3);
-            \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (.15,.3); %5%
-        \end{tikzpicture}
-
-        %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-        \end{tabular}
-        \caption*{Expérience en utilisant les environnements de développement Unity3D (C\#), Android Studio (Java) et Visual Studio (C++/C\#).}
-\end{table}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{table}[h!]
-\centering
-\captionof*{table}{Langues étrangères}
-\begin{tabular}{llll}
-    \begin{tikzpicture}
-        \node [anchor=west] at (0,1.) {Espagnol :};
-    \node [anchor=west] at (0,.6) {Langue maternelle};
-        \draw [fill=white] (0,0) rectangle (3,.3);
-        \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (3,.3);
-    \end{tikzpicture} &
-
-    \begin{tikzpicture}
-        \node [anchor=west] at (0,.6) {Anglais : C1.2};
-        \draw [fill=white] (0,0) rectangle (3,.3);
-        \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (2.7,.3);
-    \end{tikzpicture} &
-
-    \begin{tikzpicture}
-        \node [anchor=west] at (0,.6) {Italien : B2/C1};
-        \draw [fill=white] (0,0) rectangle (3,.3);
-        \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (2,.3);
-    \end{tikzpicture} &
-
-    \begin{tikzpicture}
-        \node [anchor=west] at (0,.6) {Allemand : B1};
-        \draw [fill=white] (0,0) rectangle (3,.3);
-        \draw [fill={rgb:red,1;green,2;blue,3}] (0,0) rectangle (1,.3);
-    \end{tikzpicture}
-\end{tabular}
-\end{table}
-
-
+    \subsection*{Langues :}
+    \begin{itemize}
+        \item \textbf{Courant :} Espagnol (natif), Anglais (C1.2), Italien (B2/C1).
+        \item \textbf{Notions :} Allemand (A2/B1), Français (A2).
+    \end{itemize}
 \end{rSection}
 
-\vspace{\baselineskip}
-\begin{flushright} \small{Mise à jour : \today} \end{flushright}
-
+% \vspace{\baselineskip}
+\begin{flushright} \small{Mis à jour le : \today} \end{flushright}
 
 \end{document}
